# my-calculator

./: README.md  commands.txt  pyproject.toml
src/: calculator.py
tests/unit/: test_calculator.py  test_history.py
